<resources>
    <string name="app_name">Assignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="added_successfully">Added successfully</string>
    <string name="alert">Alert!</string>
    <string name="do_you_want_to_delete">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="the_balance_is_insufficient">The balance is insufficient</string>
    <string name="please_input_a_password">Please input a password</string>
    <string name="top_up_successful">Top up successful</string>
    <string name="payment_successful">Payment successful</string>
    <string name="the_password_is_incorrect">The password is incorrect</string>
    <string name="please_input_an_amount">Please input an amount</string>
    <string name="updated_successfully">Updated successfully</string>
    <string name="error">Error</string>
    <string name="dismiss">Dismiss</string>
    <string name="name_label">Name:</string>
    <string name="phoneNo_label">Phone No:</string>
    <string name="deliveryAddress_label">Delivery Address:</string>
    <string name="done">Done</string>
    <string name="hint_name">Tan Ah Kow</string>
    <string name="hint_phoneNo">0123456789</string>
    <string name="hint_address">No. 7 Jalan Kuching Kuala Lumpur</string>
    <string name="submit">Submit</string>
    <string name="delete">Deleted successfully</string>
</resources>